--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'java'
+    id 'org.jetbrains.kotlin.jvm' version "1.7.21"
+    id "org.jetbrains.kotlin.plugin.allopen" version "1.7.21"
     id 'io.quarkus'
 }
 
@@ -10,10 +12,37 @@ repositories {
 
 dependencies {
     implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
+    implementation 'io.quarkus:quarkus-kotlin'
     implementation 'io.quarkus:quarkus-arc'
+    implementation 'io.quarkus:quarkus-smallrye-openapi'
+    implementation 'io.quarkus:quarkus-config-yaml'
+
     implementation 'io.quarkus:quarkus-resteasy-reactive'
+    implementation 'io.quarkus:quarkus-resteasy-reactive-jackson'
+    implementation 'io.quarkus:quarkus-rest-client-reactive-jackson'
+
+    implementation 'io.quarkus:quarkus-agroal'
+    implementation 'io.quarkus:quarkus-hibernate-validator'
+    implementation 'io.quarkus:quarkus-hibernate-reactive-panache-kotlin'
+    implementation 'io.quarkus:quarkus-reactive-pg-client'
+
+    implementation 'io.quarkus:quarkus-smallrye-opentracing'
+
+    implementation 'io.quarkus:quarkus-smallrye-reactive-messaging-kafka'
+
+    implementation 'org.mapstruct:mapstruct:1.3.1.Final'
+    implementation 'org.mapstruct:mapstruct-processor:1.3.1.Final'
+
     testImplementation 'io.quarkus:quarkus-junit5'
-    testImplementation 'io.rest-assured:rest-assured'
+
+    testImplementation 'io.rest-assured:rest-assured:5.3.0'
+    testImplementation 'io.rest-assured:kotlin-extensions:5.3.0'
+
+    testImplementation 'io.smallrye.reactive:smallrye-reactive-messaging-in-memory:4.1.0'
+
+    testImplementation 'io.quarkus:quarkus-test-h2'
+
+    testImplementation 'io.quarkiverse.mockk:quarkus-junit5-mockk:1.1.1'
 }
 
 group 'com.exxeta'
@@ -27,11 +56,18 @@ java {
 test {
     systemProperty "java.util.logging.manager", "org.jboss.logmanager.LogManager"
 }
-compileJava {
-    options.encoding = 'UTF-8'
-    options.compilerArgs << '-parameters'
+
+allOpen {
+    annotation("javax.ws.rs.Path")
+    annotation("javax.enterprise.context.ApplicationScoped")
+    annotation("io.quarkus.test.junit.QuarkusTest")
 }
 
-compileTestJava {
-    options.encoding = 'UTF-8'
+compileKotlin {
+    kotlinOptions.jvmTarget = JavaVersion.VERSION_11
+    kotlinOptions.javaParameters = true
+}
+
+compileTestKotlin {
+    kotlinOptions.jvmTarget = JavaVersion.VERSION_11
 }
