--- a/build.gradle
+++ b/build.gradle
@@ -21,17 +21,17 @@ dependencies {
     implementation 'io.quarkus:quarkus-resteasy-reactive-jackson'
     implementation 'io.quarkus:quarkus-rest-client-reactive-jackson'
 
-    implementation 'io.quarkus:quarkus-agroal'
     implementation 'io.quarkus:quarkus-hibernate-validator'
     implementation 'io.quarkus:quarkus-hibernate-reactive-panache-kotlin'
     implementation 'io.quarkus:quarkus-reactive-pg-client'
+    implementation 'io.quarkus:quarkus-liquibase'
 
     implementation 'io.quarkus:quarkus-smallrye-opentracing'
 
     implementation 'io.quarkus:quarkus-smallrye-reactive-messaging-kafka'
 
-    implementation 'org.mapstruct:mapstruct:1.3.1.Final'
-    implementation 'org.mapstruct:mapstruct-processor:1.3.1.Final'
+    implementation 'org.mapstruct:mapstruct:1.5.3.Final'
+    implementation 'org.mapstruct:mapstruct-processor:1.5.3.Final'
 
     testImplementation 'io.quarkus:quarkus-junit5'
 
