--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version "1.7.21"
+    id 'org.jetbrains.kotlin.kapt' version "1.7.21"
     id "org.jetbrains.kotlin.plugin.allopen" version "1.7.21"
     id "io.gitlab.arturbosch.detekt" version "1.19.0"
     id 'io.quarkus'
@@ -32,7 +33,7 @@ dependencies {
     implementation 'io.quarkus:quarkus-smallrye-reactive-messaging-kafka'
 
     implementation 'org.mapstruct:mapstruct:1.5.3.Final'
-    implementation 'org.mapstruct:mapstruct-processor:1.5.3.Final'
+    kapt 'org.mapstruct:mapstruct-processor:1.5.3.Final'
 
     testImplementation 'io.quarkus:quarkus-junit5'
 
@@ -76,6 +77,13 @@ compileTestKotlin {
 detekt {
     source = files("$projectDir/src/main/kotlin")
     config = files("$projectDir/config/detekt/detekt.yml")
+}
+
+kapt {
+    arguments {
+        arg("mapstruct.defaultComponentModel", "cdi")
+        arg("mapstruct.defaultInjectionStrategy", "constructor")
+    }
 }
 
 tasks.named("detekt").configure {
