--- a/src/main/resources/db/migrations/v001/create_todo_table.yaml
+++ b/src/main/resources/db/migrations/v001/create_todo_table.yaml
@@ -18,6 +18,12 @@ databaseChangeLog:
                   constraints:
                     nullable: false
               - column:
+                  name: done
+                  type: boolean
+                  defaultValue: false
+                  constraints:
+                    nullable: false
+              - column:
                   name: created_at
                   type: timestamp
                   constraints:
