--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3.8"
 
 services:
-  show-case-postgres:
-    image: postgres:15.1-alpine
+  postgres:
+    image: postgres:12.2-alpine
     restart: always
     ports:
       - "5436:5432"
