Adds database migration script

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,6 @@ quarkusPluginVersion=2.14.2.Final
 quarkusPlatformGroupId=io.quarkus.platform
 quarkusPlatformArtifactId=quarkus-bom
 quarkusPlatformVersion=2.14.2.Final
+
+kapt.classloaders.cache.size=5
+kapt.include.compile.classpath=false
