--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'io.quarkus:quarkus-hibernate-reactive-panache-kotlin'
     implementation 'io.quarkus:quarkus-reactive-pg-client'
     implementation 'io.quarkus:quarkus-liquibase'
+    implementation 'org.postgresql:postgresql:42.5.1'
 
     implementation 'io.quarkus:quarkus-smallrye-opentracing'
 
