--- a/src/main/resources/db/migrations/v001/create_todo_table.yaml
+++ b/src/main/resources/db/migrations/v001/create_todo_table.yaml
@@ -8,7 +8,7 @@ databaseChangeLog:
             columns:
               - column:
                   name: id
-                  type: UUID
+                  type: uuid
               - column:
                   name: description
                   type: text
