--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     def reactive_messaging_in_memory_version = "4.1.1"
     def quarkus_mockk_version = "1.1.1"
     def postgres_version = "42.5.1"
+    def jackson_module_kotlin_version = "2.14.0"
 
     implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
     implementation 'io.quarkus:quarkus-kotlin'
@@ -25,6 +26,7 @@ dependencies {
     implementation 'io.quarkus:quarkus-smallrye-openapi'
     implementation 'io.quarkus:quarkus-config-yaml'
 
+    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:$jackson_module_kotlin_version"
     implementation 'io.quarkus:quarkus-resteasy-reactive'
     implementation 'io.quarkus:quarkus-resteasy-reactive-jackson'
     implementation 'io.quarkus:quarkus-rest-client-reactive-jackson'
