--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,8 @@ dependencies {
 
     testImplementation "io.smallrye.reactive:smallrye-reactive-messaging-in-memory:$reactive_messaging_in_memory_version"
 
+    testImplementation "io.quarkus:quarkus-test-vertx"
+
     testImplementation "io.quarkiverse.mockk:quarkus-junit5-mockk:$quarkus_mockk_version"
 }
 
