--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,13 @@ quarkus:
       url: postgresql://localhost:5436/postgres
     username: postgres
     password: postgres
+    devservices:
+      enabled: true
+      image-name: postgres:12.2-alpine
+      db-name: RCT_DAS
+      username: RCT_DAS
+      password: RCT_DAS_PW
+      port: 5555
   liquibase:
     migrate-at-start: false
     change-log: db/changeLog.yaml
@@ -33,3 +40,16 @@ mp:
 
 liquibase:
   url: jdbc:postgresql://localhost:5436/postgres
+
+"%test":
+   quarkus:
+     datasource:
+       db-kind: postgresql
+       jdbc: false
+       reactive:
+         url: postgresql://localhost:5555/RCT_DAS
+       username: RCT_DAS
+       password: RCT_DAS_PW
+
+   liquibase:
+     url: jdbc:postgresql://localhost:5555/RCT_DAS
